feat: section3_7